Changelog for Hoogle

5.0.9
    #202, add --haddock functionality
5.0.8
    #194, make --local work regardless of code page
5.0.7
    #200, make sure the content-type is set properly
5.0.6
    #196, make --local look for .cabal files as well
    Fix up Frege documentation generation
5.0.5
    #193, support multiple --local flags
    #195, add --home flag to server mode
    Allow haskell-src-exts-1.19
5.0.4
    #184, use file URLs for local docs
    #183, make --local look for .txt files recursively
5.0.3
    #181, use the proper network constraints
    Avoid deprecated Aeson modules
5.0.2
    Move to haskell-src-exts-1.18
5.0.1
    #178, support the --link argument
    #178, add module names to results on the command line
    #177, require containers 0.5 or above
5.0
    #172, make sure --local links work on Linux
    #116, store data files in getAppUserDataDirectory by default
    G472, be robust to corrupt Hoogle files
    G521, make sure it works with inverted color preferences
    Rewrite from scratch
4.2.38
    #96, allow certicate verification failures
    #95, allow a higher version of Cabal on older GHCs
4.2.37
    #94, GHC 7.10 support
4.2.36
    #85, add support for missing type constructors
4.2.35
    Allow haskell-src-exts-1.16
4.2.34
    Add defaultDatabaseLocation
4.2.33
    Allow WAI-3.0
4.2.32
    Allow haskell-src-exts-1.15
4.2.31
    #61, support conduit-1.1
4.2.30
    #57, support QuickCheck-2.7
4.2.29
    #55, if reading as UTF8 fails, explicitly try Latin1
    Add QuickCheck as a dependency
    Change createDatabase to also save the file
    Disable rank feature
    Remove running a hoogle query without converting the database
    Ignore packages without documentation to hoogle data
4.2.28
    Upgrade to shake-0.11
    #49, update "hoogle data" to be incremental
4.2.27
    Rewrite how "hoogle data" works
    #45, if you are building all, also depend on default
    #47, switch to using Shake to build the recipes
    Add a dependency on Shake